@@ -22,8 +22,8 @@ import org.jetbrains.kotlin.cli.common.ExitCode
 import org.jetbrains.kotlin.cli.common.arguments.K2JVMCompilerArguments
 import org.jetbrains.kotlin.cli.common.messages.MessageCollector
 import org.jetbrains.kotlin.cli.common.messages.MessageCollectorImpl
+import org.jetbrains.kotlin.codegen.forTestCompile.ForTestCompileRuntime
 import org.jetbrains.kotlin.config.LanguageVersion
-import org.jetbrains.kotlin.incremental.multiproject.EmptyModulesApiHistory
 import org.jetbrains.kotlin.incremental.utils.*
 import org.jetbrains.kotlin.test.util.KtTestUtil
 import java.io.ByteArrayOutputStream
@@ -48,7 +48,10 @@ abstract class AbstractIncrementalJvmCompilerRunnerTest : AbstractIncrementalCom
         val kotlinCompileResult = TestCompilationResult(reporter, messageCollector)
         if (kotlinCompileResult.exitCode != ExitCode.OK) return kotlinCompileResult
 
-        val (javaExitCode, _, javaErrors) = compileJava(sourceRoots, args.destination!!)
+        (val javaExitCode = exitCode, val javaErrors = compileErrors) = compileJava(
+            sourceRoots,
+            args.destination!!
+        )
         return when (javaExitCode) {
             ExitCode.OK -> kotlinCompileResult
             else -> kotlinCompileResult.copy(exitCode = javaExitCode, compileErrors = javaErrors)
@@ -69,8 +72,11 @@ abstract class AbstractIncrementalJvmCompilerRunnerTest : AbstractIncrementalCom
         val rootsWalk = sourceRoots.asSequence().flatMap { it.walk() }
         val files = rootsWalk.filter(File::isFile)
         val sourceFiles = files.filter { it.extension.lowercase() in allExtensions }.toList()
-        val buildHistoryFile = File(cachesDir, "build-history.bin")
+        // Using workingDir here simulates externally managed caches, so IC runner will not wipe it on non-incremental build
+        val classpathSnapshotDir = File(workingDir, "classpathSnapshot").apply { mkdirs() }
+        val classpathChanges = makeEmptyClasspathChangesForSingleModuleTests(classpathSnapshotDir)
         args.javaSourceRoots = sourceRoots.map { it.absolutePath }.toTypedArray()
+        args.noStdlib = true
         val buildReporter = TestBuildReporter(testICReporter = reporter, buildMetricsReporter = DoNothingBuildMetricsReporter)
 
         withIncrementalCompilation(args) {
@@ -78,30 +84,27 @@ abstract class AbstractIncrementalJvmCompilerRunnerTest : AbstractIncrementalCom
 
             val compiler =
                 if (k2Mode && args.useFirIC && args.useFirLT /* TODO by @Ilya.Chernikov: move LT check into runner */) {
-                    val snapshotsDir = File(workingDir, "classpath-snapshots").apply { mkdirs() }
-
                     IncrementalFirJvmCompilerTestRunner(
                         cachesDir,
                         buildReporter,
                         outputDirs = null,
-                        makeEmptyClasspathChangesForSingleModuleTests(snapshotsDir),
+                        classpathChanges,
                         kotlinExtensions,
-                        testLookupTracker = testLookupTracker
+                        lookupTrackerDelegate = testLookupTracker
                     )
                 } else {
                     val verifiedPreciseJavaTracking = args.disablePreciseJavaTrackingIfK2(usePreciseJavaTrackingByDefault = true)
                     IncrementalJvmCompilerTestRunner(
                         cachesDir,
                         buildReporter,
-                        buildHistoryFile = buildHistoryFile,
+                        classpathChanges,
                         outputDirs = null,
-                        modulesApiHistory = EmptyModulesApiHistory,
                         kotlinSourceFilesExtensions = kotlinExtensions,
                         icFeatures = IncrementalCompilationFeatures(
                             withAbiSnapshot = false,
                             usePreciseJavaTracking = verifiedPreciseJavaTracking
                         ),
-                        testLookupTracker = testLookupTracker
+                        lookupTrackerDelegate = testLookupTracker
                     )
                 }
             //TODO by @Ilya.Chernikov: set properly
@@ -123,11 +126,15 @@ abstract class AbstractIncrementalJvmCompilerRunnerTest : AbstractIncrementalCom
             }
             mkdirs()
         }
-        val args = arrayOf(
-            "-cp", javaClasspath,
-            "-d", javaDestinationDir.absolutePath,
-            *javaSources.map { it.absolutePath }.toTypedArray()
-        )
+        val args = buildList {
+            val javaVersion = System.getProperty("java.specification.version")?.substringAfter('.')?.toIntOrNull() ?: 8
+            if (javaVersion <= 8) {
+                add("-Djava.ext.dirs=") // prevent from scanning extensions
+            }
+            add("-cp"); add(javaClasspath)
+            add("-d"); add(javaDestinationDir.absolutePath)
+            addAll(javaSources.map { it.absolutePath })
+        }.toTypedArray()
 
         val err = ByteArrayOutputStream()
         val javac = ToolProvider.getSystemJavaCompiler()
@@ -147,7 +154,7 @@ abstract class AbstractIncrementalJvmCompilerRunnerTest : AbstractIncrementalCom
 
     private val compileClasspath =
         listOf(
-            kotlinStdlibJvm,
+            ForTestCompileRuntime.runtimeJarForTests(),
             KtTestUtil.getAnnotationsJar()
         ).joinToString(File.pathSeparator) { it.absolutePath }
 }
